# graphcoreVM

./: CMakeLists.txt  README.md
docs/: encoding.md  execution.md  isa.md  runtime.md
examples/: pagerank.cpp
examples/debug/: debug.gcvm  debug.graph
examples/pagerank/: pagerank.gcvm  pagerank.graph
include/: GCVM.h  Graph.h  Program.h  assembler.h  gcvm.h  graph.h  graphcore.h  jit.h  lowered_ir.h  program.h  state.h
src/: GCVM.cpp  assembler.cpp  gcvm.cpp  gcvmasm.cpp  graphasm.cpp  graphcore.cpp  jit.cpp
test/: test.cpp
